test/errors/err-varyingparams.tpg
generator		-- Import Statements
declarations	-- General Declarations
operators		-- Operators (our Node Kinds)
	CONST
rules			-- Production Rules
	test = CONST (test, test) : 1
		| CONST (test) : 0.		-- Error case: You can not define a Terminal with varying params 
end




